# libpak

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  android.c  bluetooth.h  bluez.c  dbus.c  dbus.h  test.c  wifi.c  wifi.h
android/: .gitignore  build.gradle.kts  local.properties
android/src/androidTest/java/dev/danielc/libgadgetpair/: ExampleInstrumentedTest.java
android/src/androidTest/java/dev/danielc/libpak/: WiFiTest.java
android/src/main/: AndroidManifest.xml
android/src/main/java/dev/danielc/libpak/: Bluetooth.java  Companion.java  Exif.java  Pak.java  WiFi.java
android/src/test/java/dev/danielc/libgadgetpair/: ExampleUnitTest.java
bindings/: buffer_js.h  quickjs_runtime.c  quickjs_socket.c  quickjs_wifi.c  wifi.d.ts
docs/: bluetooth.md
examples/: bt.c  btdump.c  buffer.js  dummy.c  nothing.c  test.js  veecar.c  veecar.js  veecar.json  x.js
include/: bluetooth.h  device.h  pak.h  runtime.h  runtime_ext.h  wifi.h
ndk/: android.c  bluetooth.c  ndk.h  usb.c  wifi.c
src/: android.c  android_usb.c  bluetooth.h  bluez.c  cli.c  cli_runtime.c  common.c  dbus.c  dbus.h  exif.c  gc.c  gc.h  libpak.pc.in  main.h  nm_wifi.c  quickjs_socket.c  quickjs_wifi.c  test.c  wifi.c  wifi.h
src/android/: android.c  bluetooth.c  exif.c  ndk.h  wifi.c
src/bindings/: buffer_js.h  http_js.h  quickjs_runtime.c  quickjs_wifi.c  wasm.c
src/linux/: bluez.c  networkmanager.c
src/typescript/: Makefile
src/typescript/src/: buffer.ts  http.js
src/typescript/types/: pak.d.ts
ts/: Makefile  tsconfig.json
ts/src/: buffer.ts  http.js  index.ts
ts/types/: pak.d.ts
